src/snapshots/beet_smart_cutoff__beet_command__tests__args_compound.snap
---
source: src/beet_command.rs
expression: "beet_list_command(\"a\\nb\\nc,d\\ne,f\\ng\", None)"
---
[
  "list",
  "a",
  "b",
  "c,",
  "d",
  "e,",
  "f",
  "g",
]
