src/snapshots/beet_smart_cutoff__beet_command__tests__args_compound_extra.snap
---
source: src/beet_command.rs
expression: "beet_list_command(\"a\\nb\\nc,d\\ne,f\\ng\", extra)"
---
[
  "list",
  "a",
  "b",
  "c",
  "extra,",
  "d",
  "e",
  "extra,",
  "f",
  "g",
  "extra",
]
