src/snapshots/beet_smart_cutoff__beet_command__tests__args_simple_extra.snap
---
source: src/beet_command.rs
expression: "beet_list_command(\"a\\nb\\nc\", extra)"
---
[
  "list",
  "a",
  "b",
  "c",
  "extra",
]
