src/snapshots/beet_smart_cutoff__beet_command__tests__empty_extra.snap
---
source: src/beet_command.rs
expression: "beet_list_command(\"\", extra)"
---
[
  "list",
  "extra",
]
